# task_management_api

./: .gitignore  README.md  pyproject.toml  utils.py
app/: crud.py  database.py  main.py  models.py  schemas.py
app/api/v1/: api.py
app/api/v1/endpoints/: tasks.py  users.py
app/auth/: router.py
app/core/: config.py  security.py
app/services/: email.py
migrations/: env.py
migrations/versions/: 540727784959_removed_redundant_columns_expiration_.py  6404069b8bf0_create_user_and_task_tables.py  bec83e0103c8_add_email_verification_columns_to_user.py  c6626158dd85_create_initial_tables.py
tests/: conftest.py  test_main.py  test_tasks.py  test_users.py
