[project]
name = "task-management-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "asyncmy>=0.2.10",
    "fastapi[standard]>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=8.3.5",
    "python-jose[cryptography]>=3.4.0",
    "sqlalchemy>=2.0.41",
]
